Changed height to auto to fix spacing issue for .overview_stats

--- a/src/styles/Overview/Stats.css
+++ b/src/styles/Overview/Stats.css
@@ -6,6 +6,6 @@
     gap: 30px;
 
     padding-left: 20px;
-    height: 100%;
+    height: auto;
     width: 100%;
 }
